<resources>
    <string name="app_name">Covid-19</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus_format">+ %,d</string>
    <string name="comma_format"> %,d</string>
    <string name="recovered">بهبودیافته\u200cها</string>
    <string name="recovered_today">بهبودیافته\u200cهای امروز : </string>
    <string name="active">کیس\u200cهای فعال</string>
    <string name="active_2">کیس\u200cهای فعال : </string>
    <string name="critical">کیس\u200cهای وخیم</string>
    <string name="critical_2">کیس\u200cهای وخیم : </string>
    <string name="space">\u0020</string>
    <string name="exit_des">برای خروج دکمه برگشت را دوباره کلیک کنید</string>
    <string name="wifi_on">لطفا اینترنت خود را روشن کنید و دوباره تلاش کنید</string>
    <string name="stayHealthy">آگاه باشید \nسالم بمانید</string>
    <string name="welcome">به برنامه اطلاعاتی کووید-۱۹خوش آمدید</string>
    <string name="search_hint">جستجوی کشور</string>
</resources>
