<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coronaViewModel"
            type="com.abbaszadeh.sanaz.covid_19.corona.ui.CoronaViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:layoutDirection="rtl"
                tools:context=".corona.ui.HomeFragment">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/updated_id"
                    bindServerDate="@{coronaViewModel.generalStatistics.updated}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textColor="#46FFFFFF"
                    android:textSize="9sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/yellow_card"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardBackgroundColor="@color/yellow"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toStartOf="@id/red_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/updated_id">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="مبتلایان"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/showNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/comma_format(coronaViewModel.generalStatistics.cases)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/red_card"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="25dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/yellow_card"
                    app:layout_constraintTop_toBottomOf="@id/updated_id">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="فوتی‌ها"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/showNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/comma_format(coronaViewModel.generalStatistics.deaths)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/green_card"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toStartOf="@id/blue_card"
                    app:layout_constraintStart_toStartOf="@id/yellow_card"
                    app:layout_constraintTop_toBottomOf="@id/yellow_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/showNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/comma_format(coronaViewModel.generalStatistics.recovered)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/blue_card"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toStartOf="@id/purple_card"
                    app:layout_constraintStart_toEndOf="@id/green_card"
                    app:layout_constraintTop_toTopOf="@id/green_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/active"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/showNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/comma_format(coronaViewModel.generalStatistics.active)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/purple_card"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@color/purple"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@id/red_card"
                    app:layout_constraintStart_toEndOf="@id/blue_card"
                    app:layout_constraintTop_toTopOf="@id/green_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/critical"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/showNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/comma_format(coronaViewModel.generalStatistics.critical)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rv_bg"
                    android:paddingHorizontal="25dp"
                    android:scrollbarSize="2dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbarThumbVertical="@color/dark_gray"
                    android:scrollbarTrackVertical="@color/light_gray"
                    android:scrollbars="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/purple_card"
                    tools:listitem="@layout/layout_rv_home" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>